--- a/play.html
+++ b/play.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    <title>I Love Tetris v0.01</title>
+    <title>I Love Tetris v0.02</title>
     <style>
         body {
             font-family: Monospace;
@@ -21,11 +21,14 @@
 <body>    
     <script src="js/libs/three.min.js"></script>
     <script src="js/libs/stats.min.js"></script>
+    <script src='js/libs/dat.gui.min.js'></script>
 
     <script src="js/obj/Brick.js"></script>
-
     <script src="js/GamePlay.js"></script>    
     <script src="js/GameMain.js"></script>
+
+    <script src="js/AIMode1.js"></script>
+    <script src="js/AIMode2.js"></script>
 
 </body>
 
